# SudokuSolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
assignments/: Example.txt
src/: Sudoku.cpp  Sudoku.h
